--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                     <option value="shia">Shia Ithna Ansari, Leva Research Institute, Tehran</option>
                 </select>
             </div>
-            <div id="localTime">Local Time: Unknown</div>
-            <div id="timezone">Timezone: Unknown</div>
+            <div id="localTime">Local Time: ...</div>
+            <div id="timezone">Timezone: ...</div>
             <div id="aboutInfo">
                 An app to display current prayer times for the selected location.
                 <br>
